# caisin-rs

./: Cargo.toml
caisin-macros/: Cargo.toml
caisin-macros/src/: lib.rs  util.rs
caisin-macros/src/derives/: create_table.rs  mod.rs
caisin-macros/src/models/: field.rs  mod.rs
code-gen/: Cargo.toml
code-gen/src/: dbs.rs  main.rs  mod.rs
code-gen/src/db/: dbs.rs
code-gen/src/models/: dept.rs  field.rs  mod.rs  table.rs
src/: bars.rs  cryptos.rs  dbs.rs  defer.rs  files.rs  img_hash.rs  json.rs  lib.rs  lists.rs  maps.rs  rs_db_mapping.rs  times.rs
