[package]
name = "caisin"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Caisin/caisin-rs.git"
description = "caisin tools"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="caisin"
path="src/lib.rs"


[dependencies]
anyhow = "1.0.63"
serde = "1"
serde_json = "1.0.85"

[workspace]
members = ["code-gen","caisin-macros"]