[package]
name = "caisin"
version = "0.1.22"
edition = "2021"
repository = "https://github.com/Caisin/caisin-rs.git"
description = "caisin tools"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="caisin"
path="src/lib.rs"


[dependencies]
anyhow = "1.0.63"
# 日期
chrono = "0.4"
serde = { version="1", features = ["derive"] }
serde_json = "1"

rbatis="4"
rbdc-mysql="0.1"
rbdc-sqlite = { version = "0.1" }
rbs = { version = "0.1"}

rust-crypto = { version = "0.2" }

tokio = { version = "1", features = ["full"] }

[workspace]
members = ["code-gen","caisin-macros"]




[dev-dependencies]
tokio-test = "0.4"
