[package]
name = "caisin-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="caisin_macros"
path="src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "^1", default-features = false, features = [ "full", "derive", "clone-impls", "parsing", "proc-macro", "printing", "extra-traits" ] }
quote = "^1"
proc-macro2 = "^1"
serde = { version = "1", features = ["derive"] }

caisin={path="../"}
# 字符串驼峰蛇形转换
heck = "0.4"